Fix Mobile Widget Spacing

--- a/scss/parts/_structure.scss
+++ b/scss/parts/_structure.scss
@@ -360,11 +360,7 @@
 .footer-widgets {
     
     .widget {
-        margin-bottom: 30px;
-    }
-    
-    .widget-area:last-of-type .widget:last-of-type {
-        margin-bottom: 0;
+        margin: 15px auto;
     }
     
 }
